# JTKJ-PicoRTOS-Project_myyrabileet

./: .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: doxygen-pages.yml
examples/compilation_errors/: CMakeLists.txt
examples/hat_example/: CMakeLists.txt
examples/hello_blink/: CMakeLists.txt
examples/hello_blink_freertos/: CMakeLists.txt
examples/hello_dual_cdc/: CMakeLists.txt
examples/hello_dual_cdc/src/: main.c
examples/hello_freertos/: CMakeLists.txt
examples/hello_hat/: CMakeLists.txt
examples/hello_hat/src/: main.c
examples/hello_microphone/: CMakeLists.txt
examples/hello_pico/: CMakeLists.txt
libs/TKJHAT/docs/: Doxyfile
libs/TKJHAT/include/tkjhat/: sdk.h
libs/TKJHAT/src/: sdk.c
src/: main.c  template.c
